--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
-version: "0.1"
+version: "3.9"
 services:
   bot:
     build: .
     container_name: notifier_bot
     volumes:
-      - $PWD/data:/app/data
-    environment:
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-    command: python kvartirnik_bot/main.py
+      - $PWD/logs:/app/logs
+    env_file:
+      - .env
+    command: python notifier/main.py
